fix(sidebar): prevent cut off of final chapters in sidebar

--- a/theme-dark.scss
+++ b/theme-dark.scss
@@ -4,3 +4,8 @@
 
 // Code blocks
 $code-block-bg-alpha: -.8;
+
+// Prevent cut-off of final chapters in sidebar
+.sidebar-menu-container {
+    padding-bottom: 10em;
+}
