--- a/theme-light.scss
+++ b/theme-light.scss
@@ -9,3 +9,8 @@ $code-block-bg-alpha: -.8;
 .sidebar-item .chapter-number {
     color: #fff !important; 
 }
+
+// Prevent cut-off of final chapters in sidebar
+.sidebar-menu-container {
+    padding-bottom: 10em;
+}
